[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://World.gd" type="Script" id=2]
[ext_resource path="res://EnemySpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://Space Junk.wav" type="AudioStream" id=4]
[ext_resource path="res://plex-mono_12.tres" type="DynamicFont" id=5]
[ext_resource path="res://HUD.gd" type="Script" id=6]
[ext_resource path="res://PauseMenu.tscn" type="PackedScene" id=7]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 2
emission_box_extents = Vector3( 1, 90, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = -200.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 45.0
angle_random = 1.0
scale = 1.5
scale_random = 1.0
color = Color( 0.792157, 0.792157, 0.792157, 1 )

[node name="World" type="Node2D"]
script = ExtResource( 2 )

[node name="BGLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="BG" type="ColorRect" parent="BGLayer"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stars" type="Particles2D" parent="BGLayer"]
position = Vector2( 360, 90 )
amount = 30
lifetime = 4.0
explosiveness = 0.15
local_coords = false
process_material = SubResource( 1 )

[node name="NormalLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="Player" parent="NormalLayer" instance=ExtResource( 1 )]
position = Vector2( 56, 90 )

[node name="EnemySpawner" parent="NormalLayer" instance=ExtResource( 3 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0
autoplay = true

[node name="HUDLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="MarginContainer" parent="HUDLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HUDLayer/HUD"]
margin_left = 10.0
margin_top = 10.0
margin_right = 350.0
margin_bottom = 170.0

[node name="Score" type="Label" parent="HUDLayer/HUD/VBoxContainer"]
margin_right = 340.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 5 )
text = "Score: 0"

[node name="ScoreTimer" type="Timer" parent="."]
autostart = true

[node name="PauseMenu" parent="." instance=ExtResource( 7 )]

[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
